# newsboy

./: '  Cargo.toml
src/: app.rs  event.rs  input.rs  main.rs  pubsub.rs  route.rs  tui.rs  view.rs
src/component/: debug.rs  header.rs  mod.rs  pubsub.rs  setting_project_id.rs  setup.rs  topics.rs
src/component/reusable/: choices.rs  input.rs  mod.rs  text_field.rs
src/gcp/: client.rs  mod.rs  models.rs
src/ui/: header.rs  mod.rs  topics_list.rs
src/ui/components/: header.rs  mod.rs  subscriptions.rs  topics.rs  topics_list.rs
