[package]
name = "pubsub-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
ratatui = "0.29.0"
crossterm = "0.25"
google-cloud-pubsub = "0.16"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.2", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
strum = "0.27.1"
strum_macros = "0.27.1"
once_cell = "1.21.3"

[dev-dependencies]
mockall = "0.11"
